fix RenderFileButton minmaxwidth calculation

BUG: 115141

svn path=/trunk/KDE/kdelibs/; revision=620582